# CMakeList.txt : CMake project for ConsoleGame3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ConsoleGame3 "ConsoleGame3.cpp" "ConsoleGame3.h" "GameBoard.c" "GameBoard.h" "BasicHi.c" "BasicHi.h" "Player.c" "Player.h" "Input.c" "GameStats.h" "GameStats.c" "Comms.c" "Comms.h")

# TODO: Add tests and install targets if needed.
